--- a/Assignment03/Logan-Sadia-Kei_COMP308Lab03/package.json
+++ b/Assignment03/Logan-Sadia-Kei_COMP308Lab03/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^4.0.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
